final .jar again